<?xml version="1.0"?>
<package format="2">
  <name>turtle_rv</name>
  <version>0.0.0</version>
  <description>Runtime verification base for the Turtlebot</description>

  <maintainer email="fmclane@clemson.edu">Foster McLane</maintainer>

  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>rviz</exec_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>i2r_common</depend>
  <depend>nusmv</depend>
</package>
